[package]
name = "media-downloader"
version = "5.0.0"
description = "A GUI wrapper for yt-dlp"
authors = ["James"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "media_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.19", features = ["blocking", "stream"] }
tokio = "1.45.1"
futures-util = "0.3.31"
flate2 = "1.1.2"
zip = { version = "4.1.0", default-features = false, features = ["deflate"] }
xz2 = "0.1.7"
tar = "0.4.44"
